examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx
let xs = [x | <- [1, 2, 3]]
let after = 1
